<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/tvExpensesActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/gui_activities_expenses"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvExpensesActivityDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvExpensesActivityTitle"
        android:layout_marginTop="44dp"
        android:layout_toLeftOf="@+id/tvExpensesActivityTitle"
        android:layout_marginRight="20dp"
        android:text="@string/gui_activity_expenses_date" />
    
    <TextView
        android:id="@+id/tvExpensesActivityExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvExpensesActivityDate"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/tvExpensesActivityTitle"
        android:layout_marginRight="20dp"
        android:text="@string/gui_activity_expenses_expenses" />

    <Button
        android:id="@+id/btnExpensesActivityDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/tvExpensesActivityExpenses"
        android:layout_alignLeft="@+id/tvExpensesActivityTitle"
        android:text="@string/gui_activity_expenses_pick_date"
        android:onClick="onClickDate" />


    <EditText
        android:id="@+id/etExpensesActivityExpenses"
        android:hint="@string/gui_activity_expenses_enter_expenses"
        android:inputType="number"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnExpensesActivityDate"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnExpensesActivityDate"
        android:ems="10" />

    <TextView
        android:id="@+id/tvExpensesActivityCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvExpensesActivityExpenses"
        android:layout_below="@+id/tvExpensesActivityExpenses"
        android:layout_marginTop="10dp"
        android:text="@string/gui_activity_expenses_category" />

    <Spinner
        android:id="@+id/spExpensesActivityCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etExpensesActivityExpenses"
        android:layout_below="@+id/etExpensesActivityExpenses" />

    <Button
        android:id="@+id/btnExpensesActivitySave"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spExpensesActivityCategory"
        android:layout_marginRight="53dp"
        android:layout_marginTop="58dp"
        android:text="@string/gui_activity_expenses_save"
        android:onClick="onClickSave" />

</RelativeLayout>