<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/tvConsumptionActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/gui_activities_consumption"
        android:textSize="20sp" />

  	<LinearLayout
  	    android:layout_width="match_parent"
  	    android:layout_height="match_parent"
  	    android:layout_alignParentLeft="true"
  	    android:layout_below="@+id/tvConsumptionActivityTitle"
  	    android:layout_marginLeft="15dp"
  	    android:layout_marginTop="60dp"
  	    android:orientation="vertical" >

  	    <TextView
  	        android:id="@+id/tvConsumptionActivityFood"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:text="@string/gui_activity_consumption_food"
  	        android:textSize="18sp" />

  	    <ProgressBar
  	        android:id="@+id/pbConsumptionActivityFood"
  	        style="?android:attr/progressBarStyleHorizontal"
  	        android:layout_width="220dp"
  	        android:layout_height="wrap_content" />
  	    
  	    <TextView
  	        android:id="@+id/tvConsumptionActivityLeisure"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginTop="10dp"
  	        android:text="@string/gui_activity_consumption_leisure"
  	        android:textSize="18sp" />

  	    <ProgressBar
  	        android:id="@+id/pbConsumptionActivityLeisure"
  	        style="?android:attr/progressBarStyleHorizontal"
  	        android:layout_width="220dp"
  	        android:layout_height="wrap_content" />
  	    
  	    <TextView
  	        android:id="@+id/tvConsumptionActivityPhone"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginTop="10dp"
  	        android:text="@string/gui_activity_consumption_phone"
  	        android:textSize="18sp" />

  	    <ProgressBar
  	        android:id="@+id/pbConsumptionActivityPhone"
  	        style="?android:attr/progressBarStyleHorizontal"
  	        android:layout_width="220dp"
  	        android:layout_height="wrap_content" />
  	    
  	    <TextView
  	        android:id="@+id/tvConsumptionActivityCar"
  	        android:layout_width="wrap_content"
  	        android:layout_height="wrap_content"
  	        android:layout_marginTop="10dp"
  	        android:text="@string/gui_activity_consumption_car"
  	        android:textSize="18sp" />

  	    <ProgressBar
  	        android:id="@+id/pbConsumptionActivityCar"
  	        style="?android:attr/progressBarStyleHorizontal"
  	        android:layout_width="220dp"
  	        android:layout_height="wrap_content" />
  	    
  	    
  	    
  	</LinearLayout>

</RelativeLayout>